--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,7 +15,7 @@
             "19": "icons/19.png",
             "38": "icons/38.png"
         },
-        "default_popup": "popup.html",
+        "default_popup": "popup/popup.html",
         "default_title": "My extension"
     },
     "background": {
